added Villians page and edited the URL in the app.py page

--- a/templates/villians.html
+++ b/templates/villians.html
@@ -20,11 +20,9 @@
   </li>
  </ul>
  
-
 <img src="images/marvel-logo-header.jpg" alt="Marvel-logo" class="center">
 
-<h1 class="justify-content-center">Heroes</h1>
-
+<h1 class="justify-content-center"> Villians </h1>
     
 </body>
 </html>
