--- a/templates/villians.html
+++ b/templates/villians.html
@@ -1,28 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends 'base.html' %}
+{% block content %}
 
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>Marvel Dictionary</title>
-</head>
-<body>
+<h1 class="justify-content-center">Welcome to the dark side</h1>
 
-<ul class="nav justify-content-center">
-  <li class="nav-item">
-    <a class="nav-link active" href=" {{ url_for('index') }}">Heroes</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href=" {{ url_for('villians') }}">Villians</a>
-  </li>
- </ul>
- 
-<img src="images/marvel-logo-header.jpg" alt="Marvel-logo" class="center">
+{% endblock %}
 
-<h1 class="justify-content-center"> Villians </h1>
-    
-</body>
-</html>
