added image to background of website

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<h1 class="justify-content-center">Pick as side!</h1>
 {% extends 'base.html' %}
 {% block content %}
 
 {% endblock %}
 
-<button type="button">Click Me!</button>
+<!-- Masthead-->
+        
