--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10096,10 +10096,8 @@ hr.light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/Marvel Heores.jpg");
   background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
+  background-repeat: no-repeat;s
   background-size: cover;
 }
 header.masthead h1 {
