--- a/templates/villians.html
+++ b/templates/villians.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<h1 class="justify-content-center">Welcome to the dark side</h1>
+<h1 class="justify-content-center">Villians</h1>
 
 {% endblock %}
 
