added backgroun gradient to images.

--- a/templates/heroes.html
+++ b/templates/heroes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% extends 'base.html' %}
 {% block content %}
-<h1 class="justify-content-center">Hello, Hero!</h1>
 {% endblock %}
+
+<h1>Heroes</h1>
