removed base HTML as no longer needed, using seperate HTML files instead.

--- a/templates/heroes.html
+++ b/templates/heroes.html
@@ -4,3 +4,10 @@
 {% endblock %}
 
 <h1>Heroes</h1>
+
+
+<form action="heroes.html" method="POST">
+    <input type="text" name="search" placeholder="Search for your favourite Heroes">
+    <input type="submit" value=">>">
+
+</form>
