fixed errors in app

--- a/templates/heroes.html
+++ b/templates/heroes.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     {% for hero in heroes}
-        {{ heroes.name  }}<br>
-        {{ heroes.first_comic_appearance  }}<br>
-        {{ heroes.marvel_cinematic_universe  }}<br>
-        {{ heroes.played_by  }}<br>
-        {{ heroes.created_by  }}
+        {{ hero.name  }}<br>
+        {{ hero.first_comic_appearance  }}<br>
+        {{ hero.marvel_cinematic_universe  }}<br>
+        {{ hero.played_by  }}<br>
+        {{ hero.created_by  }}<br>
     {% endfor}
 </body>
 </html>
