--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marvel Heroes</title>
-</head>
-<body>
-     <table border = 1>
+
+{% extends "base.html" %}
+{% block stuff %}
+
+    <h1> I'm extending the base html</h1>
+     <table style="border = 1">
         <tr>
             {% for header in headers %}
                 <th> {{ header }} </th>
@@ -17,8 +16,13 @@
             <tr>
                 <td> {{ value.split(",")[0] }} </td>
                 <td> {{ value.split(",")[1] }} </td>
+                <td> {{ value.split(",")[2] }} </td>
+                <td> {{ value.split(",")[3] }} </td>
             </tr>
         {% endfor %}
     </table>
-</body>
+
+{% endblock %}
+
 </html>
+
