--- a/templates/index.html
+++ b/templates/index.html
@@ -1,28 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
-{% extends "base.html" %}
-{% block stuff %}
-
-    <h1> I'm extending the base html</h1>
-     <table style="border = 1">
-        <tr>
-            {% for header in headers %}
-                <th> {{ header }} </th>
-            {% endfor %}
-        </tr>
-        
-        {% for value in values %}
-            <tr>
-                <td> {{ value.split(",")[0] }} </td>
-                <td> {{ value.split(",")[1] }} </td>
-                <td> {{ value.split(",")[2] }} </td>
-                <td> {{ value.split(",")[3] }} </td>
-            </tr>
-        {% endfor %}
-    </table>
-
-{% endblock %}
-
+    <h1>Welcome to the Marvel Dictionary.</h1>
+    <h3>Pick a side</h3>
+    <button type="sumbit" onclick="window.location.href='{{ url_for( 'heroes') }}';">Heroes</button>
+    <button type="sumbit" onclick="window.location.href='{{ url_for( 'villains') }}';">Villains</button>
 </html>
 
