added logo header to html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,3 +2,10 @@ body {
     background-image: url('Marvel.jpg');
 
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
