added logo to all HTML files.

--- a/templates/villains.html
+++ b/templates/villains.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<button type="sumbit" onclick="window.location.href='{{ url_for('index') }}';">Return Home</button>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--Materialize css-->
+
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" type="text/css">
+     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')  }}" type="text/csss">
+
+    <title>Villians</title>
+</head>
+<body>
+<div id="wrapperHeader">
+    <div id="header">
+             <img src="{{ url_for('static', filename='Marvel.jpg') }}" width="auto" height="200" alt="logo" class="center">
+    </div> 
+</div>
     <h2>Find your favourite Villians </h2>
     <table style="border = 1">
         <tr>
@@ -18,5 +35,7 @@
             </tr>
         {% endfor %}
     </table>
+
+</body>
 </html>
 
