--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <h1>Welcome to the Marvel Dictionary.</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--Materialize css-->
+
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" type="text/css">
+     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')  }}" type="text/csss">
+
+    <title>Heroes</title>
+</head>
+<body>
+    <div id="wrapperHeader">
+    <div id="header">
+             <img src="{{ url_for('static', filename='Marvel.jpg') }}" width="auto" height="200" alt="logo" class="center">
+    </div> 
+</div>
     <h3>Pick a side</h3>
     <button type="sumbit" onclick="window.location.href='{{ url_for( 'heroes') }}';">Heroes</button>
     <button type="sumbit" onclick="window.location.href='{{ url_for( 'villains') }}';">Villains</button>
