began adding javascript to site, to make the navbar close.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 body { 
     background-image: url('Marvel.jpg');
-
+    background-colour: ed1d24;
 }
 
 .center {
@@ -8,4 +8,9 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+}
+
+
+.red { 
+    background-color:  !important;
 }
