--- a/templates/heroes.html
+++ b/templates/heroes.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<button type="sumbit" onclick="window.location.href='{{ url_for('index') }}';">Return Home</button>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.css" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" type="text/css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')  }}" type="text/csss">
-     
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
+        integrity="sha512-xA6Hp6oezhjd6LiLZynuukm80f8BoZ3OpcEYaqKoCV3HKQDrYjDE1Gu8ocxgxoXmwmSzM4iqPvCsOkQNiu41GA==" crossorigin="anonymous" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+
+    <title>Marvel DB - Heroes</title>
+</head>
+<body>
+    <nav class="#d50000 red accent-4">
+    <div class="nav-wrapper">
+    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="{{ url_for( 'index') }}">Home</a></li>
+        <li><a class="active" href="{{ url_for( 'heroes') }}">Heroes</a></li>
+        <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
+      </ul>
+    </div>
+  </nav>
+        
     <div id="wrapperHeader">
     <div id="header">
-             <img src="{{ url_for('static', filename='Marvel.jpg') }}" width="auto" height="200" alt="logo" class="center">
+             <img src="{{ url_for('static', filename='Marvel.jpg') }}" class="center">
     </div> 
-</div>
-  <h2>Find your favourite Heros</h2>
+    </div>
+
+  <h2 class="center">Find your favourite Heros</h2>
   
     <table style="border = 1">
         <tr>
@@ -29,5 +48,12 @@
             </tr>
         {% endfor %}
     </table>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    {
+</body>
 </html>
 
