--- a/templates/villains.html
+++ b/templates/villains.html
@@ -6,19 +6,32 @@
 
     <!--Materialize css-->
 
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" type="text/css">
-     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')  }}" type="text/csss">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
+        integrity="sha512-xA6Hp6oezhjd6LiLZynuukm80f8BoZ3OpcEYaqKoCV3HKQDrYjDE1Gu8ocxgxoXmwmSzM4iqPvCsOkQNiu41GA==" crossorigin="anonymous" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
 
     <title>Villians</title>
 </head>
 <body>
-<div id="wrapperHeader">
+
+    <nav class="#d50000 red accent-4">
+    <div class="nav-wrapper">
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a class="active" href="{{ url_for( 'index') }}">Home</a></li>
+        <li><a href="{{ url_for( 'heroes') }}">Heroes</a></li>
+        <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <div id="wrapperHeader">
     <div id="header">
-             <img src="{{ url_for('static', filename='Marvel.jpg') }}" width="auto" height="200" alt="logo" class="center">
+             <img src="{{ url_for('static', filename='Marvel.jpg') }}" class="center">
     </div> 
 </div>
-    <h2>Find your favourite Villians </h2>
+
+    <h2 class="center">Find your favourite Villians </h2>
     <table style="border = 1">
         <tr>
             {% for header in headers %}
@@ -36,6 +49,11 @@
         {% endfor %}
     </table>
 
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
 
