--- a/templates/register.html
+++ b/templates/register.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <!--Materialize css-->
+
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
+        integrity="sha512-xA6Hp6oezhjd6LiLZynuukm80f8BoZ3OpcEYaqKoCV3HKQDrYjDE1Gu8ocxgxoXmwmSzM4iqPvCsOkQNiu41GA==" crossorigin="anonymous" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
+
+    <!--Custom CSS-->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+
+    <title>Marvel DB - Register/log in</title>
+
 </head>
 <body>
 
 
-    <div id="wrapperHeader">
-        <div id="header">
-             <img src="{{ url_for('static', filename='Marvel1.jpg') }}" class="center">
-        </div> 
-    </div>
-
+    
        <nav class="#d50000 red accent-4">
         <div class="nav-wrapper">
             <ul class="right hide-on-med-and-down">
@@ -24,5 +30,57 @@
             </ul>
         </div>
     </nav>
+
+<div id="wrapperHeader">
+        <div id="header">
+             <img src="{{ url_for('static', filename='Marvel1.jpg') }}" class="center">
+        </div> 
+    </div>
+
+    <h1> Sign-Up </h1>
+
+<div id="register-page" class="row">
+	<div class="col s12 z-depth-6 card-panel">
+		<form class="register-form">        
+			<div class="row margin">
+				<div class="input-field col s12">
+					<i class="mdi-social-person-outline prefix"></i>
+					<input id="user_name" type="text" class="validate">
+					<label for="user_name" class="center-align">Username</label>
+				</div>
+			</div>
+			<div class="row margin">
+				<div class="input-field col s12">
+					<i class="mdi-communication-email prefix"></i>
+					<input id="user_email" type="email" class="validate">
+					<label for="user_email" class="center-align">Email</label>
+				</div>
+			</div>
+			<div class="row margin">
+				<div class="input-field col s12">
+					<i class="mdi-action-lock-outline prefix"></i>
+					<input id="user_passw" type="password" class="validate">
+					<label for="user_passw">Password</label>
+				</div>
+			</div>
+			<div class="row margin">
+				<div class="input-field col s12">
+					<i class="mdi-action-lock-outline prefix"></i>
+					<input id="confirm_pass" type="password">
+					<label for="confirm_pass">Re-type password</label>
+				</div>
+			</div>
+			<div class="row">
+				<div class="input-field col s12">
+					<a href="register.html" class="btn waves-effect #d50000 red accent-4 col s12">Register Now</a>
+				</div>
+				<div class="input-field col s12">
+					<p class="margin center medium-small sign-up">Already have an account? <a href="login.php">Login</a></p>
+				</div>
+			</div>
+		</form>
+	</div>
+</div>
+
 </body>
 </html>
