created registration that connects to database

--- a/templates/villains.html
+++ b/templates/villains.html
@@ -30,7 +30,7 @@
 
   <div id="wrapperHeader">
     <div id="header">
-             <img src="{{ url_for('static', filename='Marvel1.jpg') }}" class="center">
+             <img src="{{ url_for('static', filename='Marvel1.jpg') }}" class="center responsive-image">
     </div> 
 </div>
 
