--- a/templates/heroes.html
+++ b/templates/heroes.html
@@ -26,14 +26,11 @@
         
     <div id="wrapperHeader">
     <div id="header">
-             <img src="{{ url_for('static', filename='Marvel1.jpg') }}" class="center">
+             <img src="{{ url_for('static', filename='Marvel1.jpg') }}" class="center responsive-image">
     </div> 
     </div>
 
-  <input type="text" placeholder="Search For Your Favourite Heroes" name="search">
-  <button 
-  type="submit"><i class="fa fa-search"></i></button>
-
+<div class="container #e0e0e0 grey lighten-2"> 
     <table style="border = 1">
         <tr>
             {% for header in headers %}
@@ -50,12 +47,14 @@
             </tr>
         {% endfor %}
     </table>
+</div>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-    {
+    
 </body>
 </html>
 
