--- a/templates/register.html
+++ b/templates/register.html
@@ -16,10 +16,16 @@
     <title>Marvel DB - Register/log in</title>
 
 </head>
-<body>
-
-
-    
+<body class="#d50000 red accent-4">
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul class="flashes">
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
        <nav class="#d50000 red accent-4">
         <div class="nav-wrapper">
             <ul class="right hide-on-med-and-down">
@@ -37,49 +43,35 @@
         </div> 
     </div>
 
-    <h1> Sign-Up </h1>
+    <h1 class="center"> Sign-Up </h1>
 
 <div id="register-page" class="row">
-	<div class="col s12 z-depth-6 card-panel">
-		<form class="register-form">        
-			<div class="row margin">
-				<div class="input-field col s12">
-					<i class="mdi-social-person-outline prefix"></i>
-					<input id="user_name" type="text" class="validate">
-					<label for="user_name" class="center-align">Username</label>
-				</div>
-			</div>
-			<div class="row margin">
-				<div class="input-field col s12">
-					<i class="mdi-communication-email prefix"></i>
-					<input id="user_email" type="email" class="validate">
-					<label for="user_email" class="center-align">Email</label>
-				</div>
-			</div>
+        <div class="card-panel container center">
+		    <form class="register-form" method="post">        
+			    <div class="row margin">
+				    <div class="input-field col s12">
+					    <i class="mdi-social-person-outline prefix"></i>
+					    <input name = "username" id="user_name" type="text" class="validate" placeholder="Username">
+					    <label for="user_name" class="center-align"></label>
+				    </div>
+			    </div>        
 			<div class="row margin">
 				<div class="input-field col s12">
 					<i class="mdi-action-lock-outline prefix"></i>
-					<input id="user_passw" type="password" class="validate">
-					<label for="user_passw">Password</label>
+					<input name="password" id="user_passw" type="password" class="validate" placeholder="password">
+					<label for="user_passw" class="#d50000 red accent-4" ></label>
 				</div>
-			</div>
-			<div class="row margin">
-				<div class="input-field col s12">
-					<i class="mdi-action-lock-outline prefix"></i>
-					<input id="confirm_pass" type="password">
-					<label for="confirm_pass">Re-type password</label>
-				</div>
-			</div>
 			<div class="row">
 				<div class="input-field col s12">
-					<a href="register.html" class="btn waves-effect #d50000 red accent-4 col s12">Register Now</a>
+                    <button type="sumbit" formmethod="post" onclick="window.location.href='{{ url_for('register') }}';" class="btn waves-effect #d50000 red accent-4 col s12">register Now</button>
 				</div>
 				<div class="input-field col s12">
 					<p class="margin center medium-small sign-up">Already have an account? <a href="login.php">Login</a></p>
 				</div>
 			</div>
+        </div>
 		</form>
-	</div>
+        </div>
 </div>
 
 </body>
