--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,8 +4,12 @@ body {
 }
 
 
-
-
+.center {
+  margin: auto;
+  width: 50%;
+  border: 3px solid green;
+  padding: 10px;
+}
 
 @media screen and (max-width: 600px) {
   .topnav a, .topnav input[type=text] {
