--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,10 +5,10 @@ body {
 
 
 .center {
-  margin: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: 50%;
-  border: 3px solid green;
-  padding: 10px;
 }
 
 @media screen and (max-width: 600px) {
