--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 </head>
 
 
-<body>
+<body class="#d50000 red accent-4">
 
     <div id="wrapperHeader">
         <div id="header">
@@ -23,14 +23,14 @@
     </div>
 
     <h3 class="center" >Pick a side</h3>
-
+<div class="card-panel container center">
     <div class="center-align">
         <a class="waves-effect waves-light btn-large #d50000 red accent-4" onclick="window.location.href='{{ url_for( 'heroes') }}';">Heroes</a>
     </div>
     <div class="center-align"><br>
         <a class="waves-effect waves-light btn-large #d50000 red accent-4" onclick="window.location.href='{{ url_for( 'villains') }}';">Villains</a>
     </div>
-
+</div>
     </body>
 </html>
 
