--- a/templates/heroes.html
+++ b/templates/heroes.html
@@ -12,7 +12,7 @@
 
     <title>Marvel DB - Heroes</title>
 </head>
-<body class="#d50000 red accent-4">
+<body background="{{ url_for('static', filename='css/img/background.jpg') }}">
     <nav class="#d50000 red accent-4">
         <div class="nav-wrapper">
             <ul class="right hide-on-med-and-down">
