--- a/templates/register.html
+++ b/templates/register.html
@@ -51,7 +51,7 @@
 			    <div class="row margin">
 				    <div class="input-field col s12">
 					    <i class="mdi-social-person-outline prefix"></i>
-					    <input id="user_name" name = "username" type="text" milength="8" 
+					    <input id="user_name" name = "username" type="text" minlength="8" 
                     maxlength="15" pattern="^[a-zA-Z0-9]{5, 15}$" class="validate" placeholder="Username" required>
 					    <label for="user_name" class="center-align"></label>
 				    </div>
@@ -59,7 +59,7 @@
 			<div class="row margin">
 				<div class="input-field col s12">
 					<i class="mdi-action-lock-outline prefix"></i>
-					<input id="user_passw" name="password" type="password" milength="8" 
+					<input id="user_passw" name="password" type="password" minlength="8" 
                     maxlength="15" pattern="^[a-zA-Z0-9]{5, 15}$" class="validate" placeholder="password" required>
 					<label for="user_passw" class="#d50000 red accent-4" ></label>
 				</div>
