--- a/templates/login.html
+++ b/templates/login.html
@@ -74,7 +74,7 @@
                     Log in</button>
 			</div>
 			<div class="input-field col s12">
-				<p class="margin center medium-small sign-up">Already have an account? <a href="login.php">Login</a></p>
+				<p class="margin center medium-small sign-up">Don't have an account? <a href="{{ url_for('register') }}">Register</a></p>
 			</div>
 		</div>
         </form>
