--- a/templates/heroes.html
+++ b/templates/heroes.html
@@ -21,19 +21,20 @@
             </a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="{{ url_for( 'index') }}">Home</a></li>
-                <li><a class="active" href="{{ url_for( 'heroes') }}">Heroes</a></li>
+                <li><a href="{{ url_for( 'heroes') }}">Heroes</a></li>
                 <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
             </ul>
           
-            <ul class="sidenav" id="mobile-links">
+        
+        </div>
+    </nav>
+    <ul class="sidenav" id="mobile-links">
                 <li><a href="{{ url_for( 'index') }}">Home</a></li>
-                <li><a class="active" href="{{ url_for( 'heroes') }}">Heroes</a></li>
+                <li><a href="{{ url_for( 'heroes') }}">Heroes</a></li>
                 <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
             </ul>
-        </div>
-    </nav>
  
     <div id="wrapperHeader">
     <div id="header">
@@ -88,7 +89,7 @@
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
