fixed scalable css issues with mobile phones

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,8 @@
     <h3 class="center white-text text-lighten-2">Pick a side</h3>
 <div class="center">
     <div class="center-align">
-        <a class="waves-effect waves-light btn-large #d50000 red accent-4" onclick="window.location.href='{{ url_for( 'heroes') }}';">Heroes</a>
-        <a class="waves-effect waves-light btn-large #d50000 red accent-4" onclick="window.location.href='{{ url_for( 'villains') }}';">Villains</a>
+        <a class="waves-effect waves-light btn-large #d50000 red accent-4" style="margin-bottom: 25px;" onclick="window.location.href='{{ url_for( 'heroes') }}';">Heroes</a>
+        <a class="waves-effect waves-light btn-large #d50000 red accent-4" style="margin-bottom: 25px;" onclick="window.location.href='{{ url_for( 'villains') }}';">Villains</a>
     </div>
 </div>
     </body>
