--- a/templates/villains.html
+++ b/templates/villains.html
@@ -17,17 +17,28 @@
 </head>
 <body background=" {{ url_for('static', filename='css/img/background.jpg') }}">
 
-    <nav class="#d50000 red accent-4">
-        <div class="nav-wrapper">
+    <nav class="nav-wrapper transparent">
+        <div class="conatainer">
+            <a href="#" class="sidenav-trigger" data-target="mobile-links">
+            <i class="material-icons">menu</i>
+            </a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="{{ url_for( 'index') }}">Home</a></li>
-                <li><a class="active" href="{{ url_for( 'heroes') }}">Heroes</a></li>
+                <li><a href="{{ url_for( 'heroes') }}">Heroes</a></li>
                 <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
             </ul>
+          
+        
         </div>
     </nav>
-
+    <ul class="sidenav" id="mobile-links">
+                <li><a href="{{ url_for( 'index') }}">Home</a></li>
+                <li><a href="{{ url_for( 'heroes') }}">Heroes</a></li>
+                <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
+                <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
+            </ul>
+ 
   <div id="wrapperHeader">
     <div id="header">
              <img src="{{ url_for('static', filename='Marvel1.jpg') }}" class="center responsive-image">
