--- a/templates/villains.html
+++ b/templates/villains.html
@@ -9,14 +9,16 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
         integrity="sha512-xA6Hp6oezhjd6LiLZynuukm80f8BoZ3OpcEYaqKoCV3HKQDrYjDE1Gu8ocxgxoXmwmSzM4iqPvCsOkQNiu41GA==" crossorigin="anonymous" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
 
     <!--Custom CSS-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
 
     <title>Villians</title>
 </head>
-<body background=" {{ url_for('static', filename='css/img/background.jpg') }}">
-
+<body background="{{ url_for('static', filename='css/img/background.jpg') }}">
     <nav class="nav-wrapper transparent">
         <div class="conatainer">
             <a href="#" class="sidenav-trigger" data-target="mobile-links">
@@ -27,6 +29,7 @@
                 <li><a href="{{ url_for( 'heroes') }}">Heroes</a></li>
                 <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
+                <li><a href="{{ url_for( 'profile') }}"><i class="material-icons">account_box</i></a></li>
             </ul>
           
         
@@ -38,7 +41,7 @@
                 <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
             </ul>
- 
+            
   <div id="wrapperHeader">
     <div id="header">
              <img src="{{ url_for('static', filename='Marvel1.jpg') }}" class="center responsive-image">
