--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,3 +25,10 @@ body {
     border: 1px solid #ccc;
   }
 }
+
+.search {
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
