--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,13 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
+
     <!--Materialize css-->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
+	
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
         integrity="sha512-xA6Hp6oezhjd6LiLZynuukm80f8BoZ3OpcEYaqKoCV3HKQDrYjDE1Gu8ocxgxoXmwmSzM4iqPvCsOkQNiu41GA==" crossorigin="anonymous" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-
 
 	<title>Marvel DB - Profile</title>
     
@@ -39,9 +41,24 @@
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
             </ul>
 
-    <div class="conatainer" >
-	<h1>Welcome {{ username }}</h1>
+    <div id="wrapperHeader">
+        <div id="header">
+	        <h1>Welcome {{ username }}</h1>
+        </div>
     </div>
 
+    <div class="containter">
+        <h1> Add hero</h1>
+
+    <button href="{{ url_for( 'add_hero') }}"></button>
+        <h1> Add Villain</h1>
+    <button href="{{ url_for( 'add_villain') }}"></button>
+    </div>
+
+    
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    
 </body>
 </html>
