--- a/templates/register.html
+++ b/templates/register.html
@@ -30,7 +30,7 @@
                 <li><a href="{{ url_for( 'heroes') }}">Heroes</a></li>
                 <li><a href="{{ url_for( 'villains') }}">Villians</a></li>
                 <li><a href="{{ url_for( 'register') }}">Sign-Up</a></li>
-                <li><a href="{{ url_for( 'profile') }}"><i class="material-icons">account_box</i></a></li>
+                <li><a href="{{ url_for('login') }}"><i class="material-icons">account_box</i></a></li>
             </ul>
           
         
